--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ionic-hello-world",
+  "name": "climatic-app-2",
   "author": "Ionic Framework",
   "homepage": "http://ionicframework.com/",
   "private": true,
@@ -13,13 +13,24 @@
     "run:before": "build"
   },
   "dependencies": {
-    "ionic-angular": "^2.0.0-rc.0",
-    "ionicons": "^3.0.0",
-    "@ionic/storage": "^1.0.3",
-    "ionic-native": "^2.0.3"
+    "@angular/common": "2.0.0",
+    "@angular/compiler": "2.0.0",
+    "@angular/compiler-cli": "0.6.2",
+    "@angular/core": "2.0.0",
+    "@angular/forms": "2.0.0",
+    "@angular/http": "2.0.0",
+    "@angular/platform-browser": "2.0.0",
+    "@angular/platform-browser-dynamic": "2.0.0",
+    "@angular/platform-server": "2.0.0",
+    "ionic-angular": "2.0.0-rc.0",
+    "ionicons": "3.0.0",
+    "@ionic/storage": "1.0.3",
+    "ionic-native": "2.0.3",
+    "rxjs": "5.0.0-beta.12",
+    "zone.js": "0.6.21"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "latest",
+    "@ionic/app-scripts": "^0.0.30",
     "typescript": "^2.0.3"
   },
   "description": "climatic-app-2: An Ionic project",
